src/components/Collapse/_collapse.scss
@import '../../assets/styles/variables';

.collapse-container {
  width: 100%;
  max-width: 85%;
  margin: 0 auto;
  padding: 10px;
}

.collapse-section {
  border-radius: 5px;
  margin-bottom: 10px;
  overflow: hidden;
}

.collapse-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  cursor: pointer;
  background-color: $primary-color;
  border-radius: 10px;
}

.collapse-header h3 {
  margin: 0;
  color: white;
}

.collapse-arrow {
  width: 30px;
  transition: transform 0.3s;
}

.collapse-arrow.open {
  transform: rotate(180deg);
}

.collapse-content {
  padding: 10px;
  background-color: #F6F6F673;
}

.collapse-content ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.collapse-content li {
  padding: 5px 0;
}

@media (max-width: 768px) {
  #description-collapse {
    max-width: none;
  }

  #equipments-collapse {
    max-width: none;
  }
}

